nginx server static files

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -5,6 +5,12 @@ upstream web {
 
 # portal
 server {
+
+    location /static/ {
+        autoindex on;
+        alias /code/app/static/;
+    }
+
     location / {
         proxy_pass http://web;
         proxy_set_header Host $host;
