--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Django==1.11.15
+Django==1.11.29
 django-redis==4.9.0
 gunicorn==19.8.1
-psycopg2==2.7.4
+# psycopg2==2.7.4
+psycopg2-binary==2.8.3
 python-json-logger==0.1.8
 python-logstash==0.4.6
 pytz==2018.4
